<resources>
    <string name="app_name">egora</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="passwordRep">Passwort wiederholen</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="street">Straße</string>
    <string name="housenumber">Hausnummer</string>
    <string name="city">Stadt</string>
    <string name="login">Einloggen</string>
    <string name="register">Registrieren</string>
    <string name="registernow">Hier registrieren</string>
    <string name="forgetpassword">Passwort vergessen?</string>
    <string name="myitems">Meine Anzeigen</string>
    <string name="address">Adresse</string>
    <string name="myinfo">Benutzerkonto</string>
    <string name="contactOwner">Besitzer schreiben</string>
    <string name="message">Nachricht</string>
    <string name="communityName">Communityname</string>
    <string name="community">Community</string>
    <string name="userName">Name</string>
    <string name="communityKey">Zugangscode</string>
    <string name="owner">Besitzer</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="myData">Meine Daten</string>
    <string name="myCommunity">Meine Community</string>
    <string name="logout">Abmelden</string>
    <string name="confirm">Bestätigen</string>
    <string name="none">keiner</string>
    <string name="writeDescCommunity">Beschreibe die Community für beitretende Nutzer</string>
    <string name="create">erstellen</string>
    <string name="setKey">Erstelle einen Zugangscode für die Community</string>
    <string name="join">Beitreten</string>
    <string name="reset">Reset</string>
    <string name="itemname">Artikelname</string>
    <string name="freeFieldsNotEdit">Lasse die Felder frei, die du nicht ändern willst.</string>
    <string name="search">Suche</string>
    <string name="chooseCommunity">Wähle deine Community</string>
    <string name="communityInfo">Community Details</string>
    <string name="messenger">Deine Nachrichten</string>
    <string name="insertItem">Artikel hinzufügen</string>
    <string name="insertCommunity">Erstelle eine Community</string>
    <string name="datasecurityLink">Datenschutzrichtlinien nachlesen</string>
</resources>

