<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.CreateAccountActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="@dimen/marginForRect"
            android:layout_marginLeft="@dimen/marginForRect"
            android:textColor="@color/colorAccent"
            android:text="@string/freeFieldsNotEdit"
            app:autoSizeTextType="uniform"

            />

        <EditText
            android:id="@+id/changePassword"
            style="@style/EgoraEditText"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/changePasswordRepeat"
            style="@style/EgoraEditText"
            android:hint="@string/passwordRep"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/changeFirstName"
            style="@style/EgoraEditText"
            android:hint="@string/firstname"
            android:inputType="text" />

        <EditText
            android:id="@+id/changeLastName"
            style="@style/EgoraEditText"
            android:hint="@string/lastname"
            android:inputType="text" />

        <EditText
            android:id="@+id/changeStreetName"
            style="@style/EgoraEditText"
            android:hint="@string/street"
            android:inputType="text" />

        <EditText
            android:id="@+id/changeHouseNumber"
            style="@style/EgoraEditText"
            android:hint="@string/housenumber"
            android:inputType="text" />

        <EditText
            android:id="@+id/changeCityName"
            style="@style/EgoraEditText"
            android:hint="@string/city" />

        <Button
            android:id="@+id/buttonChangeCommit"
            style="@style/EgoraButton"
            android:layout_marginTop="@dimen/marginButtonToEditText"
            android:text="@string/confirm"
            android:layout_marginBottom="@dimen/marginToBottom" />

    </LinearLayout>

</ScrollView>
