<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="@dimen/marginEditText"
    tools:context=".Communities.NewCommunityActivity">

    <EditText
        android:id="@+id/communityNameEdit"
        style="@style/EgoraEditText"
        android:hint="@string/communityName"
        tools:ignore="Autofill"
        android:inputType="text" />

    <EditText
        android:id="@+id/descEdit"
        style="@style/EgoraEditField"
        android:layout_marginTop="@dimen/marginEditText"
        android:layout_height="180dp"
        android:gravity="top"
        android:hint="@string/writeDescCommunity"
        tools:ignore="Autofill"
        android:inputType="textMultiLine"
        android:layout_below="@id/communityNameEdit" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/marginForRect"
        android:layout_marginRight="@dimen/marginForRect"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_below="@id/descEdit" >

        <CheckBox
            android:id="@+id/keyCheckBox"
            android:backgroundTint="@color/lightTexteditColor"
            android:textColor="@color/midGrey"
            android:textSize="@dimen/smallTextSize"
            android:maxLines="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setKey" />

    </LinearLayout>

    <EditText
        android:id="@+id/keyEdit"
        style="@style/EgoraEditText"
        android:hint="@string/communityKey"
        tools:ignore="Autofill"
        android:inputType="textVisiblePassword"
        android:layout_marginTop="5dp"
        android:layout_below="@id/lin1"/>

    <Button
        android:id="@+id/buttonCreateCommunity"
        style="@style/EgoraButton"
        android:layout_below="@+id/keyEdit"
        android:layout_marginTop="10dp"
        android:text="@string/create" />

</RelativeLayout>