<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
       >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:padding="10dp"
            android:src="@drawable/ic_person_24dp"
            />

        <TextView
            android:id="@+id/my_info_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/profile_image"
            android:textColor="@color/midDarkTextColor"
            android:textSize="@dimen/largeTextSize" />

        <TextView
            android:id="@+id/my_info_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_info_firstname"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/profile_image"
            android:textColor="@color/midDarkTextColor"
            android:textSize="@dimen/largeTextSize" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/r1"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/r1"
            android:layout_alignParentBottom="true"
            android:background="@color/lightGrey">

            <RelativeLayout
                android:id="@+id/rMyData"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/marginForRect"
                android:layout_marginRight="@dimen/marginForRect"
                android:background="@drawable/text_card"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:id="@+id/titel_myData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="@string/myData"
                    android:textSize="@dimen/mediumTextSize" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/line"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/titel_myData"
                    />

                <TextView
                    android:id="@+id/my_info_table_address"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/titel_myData"
                    android:textSize="@dimen/smallTextSize"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/my_info_address"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titel_myData"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="100dp"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:textSize="@dimen/smallTextSize"
                    />

                <TextView
                    android:id="@+id/my_info_table_email"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/my_info_table_address"
                    android:textSize="@dimen/smallTextSize"
                    android:text="@string/email"
                    />

                <TextView
                    android:id="@+id/my_info_email"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/my_info_address"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="100dp"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:textSize="@dimen/smallTextSize"
                    />

                <ImageButton
                    android:id="@+id/my_info_button_change_info"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:backgroundTint="@color/lightGrey"
                    android:src="@drawable/ic_edit_24dp"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/midDarkTextColor"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rMyCommunity"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/marginForRect"
                android:layout_marginRight="@dimen/marginForRect"
                android:layout_height="150dp"
                android:layout_below="@+id/rMyData"
                android:background="@drawable/text_card"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:id="@+id/titel_myCommunity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myCommunity"
                    android:textSize="@dimen/mediumTextSize"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="40dp"
                    android:src="@drawable/line"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/titel_myCommunity"
                    />

                <TextView
                    android:id="@+id/my_info_table_community"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/titel_myCommunity"
                    android:textSize="@dimen/smallTextSize"
                    android:text="@string/community"
                    />

                <TextView
                    android:id="@+id/my_info_community"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/titel_myCommunity"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="15dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textSize="@dimen/smallTextSize" />

                <TextView
                    android:id="@+id/my_info_table_community_key"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_below="@id/my_info_table_community"
                    android:textSize="@dimen/smallTextSize"
                    android:text="@string/communityKey"
                    />

                <TextView
                    android:id="@+id/my_info_commmunity_key"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="140dp"
                    android:singleLine="true"
                    android:scrollHorizontally="true"
                    android:textSize="@dimen/smallTextSize"
                    android:layout_below="@+id/my_info_community"
                    />

                <ImageButton
                    android:id="@+id/my_info_button_change_community"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:backgroundTint="@color/lightGrey"
                    android:src="@drawable/ic_exit_24dp"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorAccent"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/button_logout"
                style="@style/EgoraButton"
                android:backgroundTint="@color/colorAccent"
                android:layout_below="@id/rMyCommunity"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:text="@string/logout" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>