<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/item_activity_layout"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_above="@id/item_activity_button_contact"
        android:backgroundTint="@color/midGrey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_activity_imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/item_activity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="1"
                android:maxLines="3"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                android:layout_below="@+id/item_activity_imageView"
                android:textColor="@color/midDarkTextColor"
                android:textSize="@dimen/mediumTextSize" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:src="@drawable/line"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/item_activity_name"
                />

            <TextView
                android:id="@+id/item_activity_owner_name_layout"
                android:layout_width="75dp"
                android:layout_marginTop="12dp"
                android:paddingLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_activity_name"
                android:text="@string/owner"
                android:textSize="@dimen/smallTextSize"
                />

            <TextView
                android:id="@+id/item_activity_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:paddingRight="10dp"
                android:layout_below="@+id/item_activity_name"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="15dp"
                android:layout_toEndOf="@+id/item_activity_owner_name_layout"
                android:textSize="@dimen/smallTextSize"
                />

            <TextView
                android:id="@+id/item_activity_owner_address_layout"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_below="@+id/item_activity_owner_name_layout"
                android:text="@string/address"
                android:textSize="@dimen/smallTextSize" />

            <TextView
                android:id="@+id/item_activity_owner_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:layout_marginLeft="15dp"
                android:lines="1"
                android:layout_below="@+id/item_activity_owner_name"
                android:layout_toEndOf="@+id/item_activity_owner_address_layout"
                android:textSize="@dimen/smallTextSize" />

            <TextView
                android:id="@+id/item_activity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="0"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/item_activity_owner_address_layout"
                android:textColor="@color/midDarkTextColor"
                android:textSize="@dimen/smallTextSize"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/item_activity_button_contact"
        style="@style/EgoraButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/contactOwner"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>



